[package]
name = "ewasm_api"
version = "0.8.0"
authors = ["Alex Beregszaszi <alex@rtfs.hu>", "Jake Lang <jak3lang@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/ewasm/ewasm-rust-api"
description = "ewasm API for Rust"
edition = "2018"

[dependencies]
wee_alloc = "0.4.4"

[features]
default = [ "std" ]
std = []
debug = []
bignum = []
